Fixed and added new functions.
Fixed 1 button some not get updated. Added new menu and added so you can place a container to link.